# rust-web-template

./: .env-example  .gitignore  Cargo.toml  README.md
scripts/: README.md  deploy.sh  run.sh
src/: lib.rs  main.rs
src/common/: README.md  constants.rs  errors.rs  mod.rs  paginate.rs  response.rs
src/config/: mod.rs
src/db/: axmongo.rs  axredis.rs  mod.rs
src/handlers/: README.md  exam_hander.rs  mod.rs  user_hander.rs
src/interceptor/: header_interceptor.rs
src/models/: auth.rs  exam_mdl.rs  mod.rs  user.rs
src/router/: README.md  mod.rs
src/service/: README.md  user_service.rs
src/utils/: jwt.rs  mod.rs  rencrypt.rs  rtime.rs
tests/: README.md  test.rs
