[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
uuid = "1.8.0"
axum-macros = "0.4.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.116"
serde_derive = "^1.0.116"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
mongodb = {version = "2.8.2",features=["async-std-runtime"],default_features = false}
dotenv = "0.15.0"
redis = "0.25.3"
once_cell = "1.19.0"
bcrypt = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.22", features = ["serde"] }

[profile.release]
# 增量编译，优化build慢问题
incremental = true

[source.crates-io]
# cargo install crm, 镜像源管理工具
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
[source.rsproxy]
registry = "https://rsproxy.cn/crates.io-index"
